changed scrollbar and fixed overflow bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,3 +40,28 @@ body {
 .link:hover::after {
   width: 100%;
 }
+
+body {
+    overflow-x: hidden;
+}
+
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #fefefe;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
